--- a/Lab 2/binary_to_bcd/config.json
+++ b/Lab 2/binary_to_bcd/config.json
@@ -1,8 +1,8 @@
 {
 	"general": {
-        "prompt": "./binary_to_bcd.sv",
+        "prompt": "./binary_to_bcd.v",
         "name": "top_module",
-        "testbench": "./binary_to_bcd_tb.sv",
+        "testbench": "./binary_to_bcd_tb.v",
 		"model_family": "ChatGPT",
 		"model_id": "gpt-4o-mini",
 		"num_candidates": 5,
