--- a/Lab 2/Binary to BCD/config.json
+++ b/Lab 2/Binary to BCD/config.json
@@ -7,7 +7,7 @@
 		"model_id": "gpt-4o-mini",
 		"num_candidates": 5,
 		"iterations": 5,
-        "outdir": "outputs_pwm",
+        "outdir": "outputs_binary_to_bcd",
         "log": "log.txt",
 		"ensemble": false
     }
